dbeaver/pro#9040: fix global filter link